force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/Apttus_Config2__AccountBillingSummary__c.object-meta.xml
<CustomObject>
    <description>Represents the billing summary for an account</description>
    <label>Account Billing Summary</label>
    <nameField>
        <displayFormat>BS-{000000}</displayFormat>
        <label>Billing Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Billing Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>