force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AccountId__c</fullName>
    <description>ID of the account associated with the billing summary</description>
    <inlineHelpText>ID of the account associated with the billing summary</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BillingSummary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>