force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__AnnualRecurringBillingsRamped__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AnnualRecurringBillingsRamped__c</fullName>
    <description>The total of  all recurring billings from the end of the contract and back for 12 months</description>
    <inlineHelpText>The total of  all recurring billings from the end of the contract and back for 12 months</inlineHelpText>
    <label>Annual Recurring Billings (Ramped)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>