force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__AnnualRecurringBillingsToday__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AnnualRecurringBillingsToday__c</fullName>
    <description>The toal of all recurring billings from today and back for 12 months</description>
    <inlineHelpText>The toal of all recurring billings from today and back for 12 months</inlineHelpText>
    <label>Annual Recurring Billings (Today)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>