force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__BilledAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BilledAmount__c</fullName>
    <description>The amount billed for the account</description>
    <inlineHelpText>The amount billed for the account</inlineHelpText>
    <label>Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>