force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__InvoiceBalance__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InvoiceBalance__c</fullName>
    <description>The invoice balance for the account</description>
    <inlineHelpText>The invoice balance for the account</inlineHelpText>
    <label>Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>