force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__IsUpToDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsUpToDate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the summary object is up to date</description>
    <inlineHelpText>Indicates whether the summary object is up to date</inlineHelpText>
    <label>Is UpTo Date</label>
    <type>Checkbox</type>
</CustomField>