force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__LastInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LastInvoiceDate__c</fullName>
    <description>The last invoice date for the account</description>
    <inlineHelpText>The last invoice date for the account</inlineHelpText>
    <label>Last Invoice Date</label>
    <type>DateTime</type>
</CustomField>