force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__NextInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NextInvoiceDate__c</fullName>
    <description>The next invoice date for the account</description>
    <inlineHelpText>The next invoice date for the account</inlineHelpText>
    <label>Next Invoice Date</label>
    <type>DateTime</type>
</CustomField>