force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__OneTimeInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OneTimeInvoiceAmount__c</fullName>
    <description>The total of all one time charges that are invoiced</description>
    <inlineHelpText>The total of all one time charges that are invoiced</inlineHelpText>
    <label>One-Time Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>