force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__TotalContractValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TotalContractValue__c</fullName>
    <description>The total contract value for the account</description>
    <inlineHelpText>The total contract value for the account</inlineHelpText>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>