force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__UnpaidAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UnpaidAmount__c</fullName>
    <description>The total amount of unpaid invoices</description>
    <inlineHelpText>The total amount of unpaid invoices</inlineHelpText>
    <label>Unpaid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>