force-app/main/default/objects/Apttus_Config2__AccountBillingSummary__c/fields/Apttus_Config2__UsageInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UsageInvoiceAmount__c</fullName>
    <description>The total of all usage charges that are invoiced</description>
    <inlineHelpText>The total of all usage charges that are invoiced</inlineHelpText>
    <label>Usage Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>